--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
         };
     </script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-    <link rel="stylesheet" href=/static/styles.css>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>Gia sư AI - Trợ lý học tập thông minh</title>
 </head>
 <body>
